<resources>
    <string name="app_name">SoftSquared Android Kotlin Template</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_my_page_title">나의 당근</string>

    <!-- Home -->
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>
    <string name="won">원</string>
    <string name="degree">℃</string>
    <string name="manner">매너온도</string>
    <string name="title">판매합니다</string>
    <string name="category2">생활/가공식품ㆍ끌올 3분 전</string>
    <string name="content">열라면 5개 싸게 가져가세요.\n건국대 황소 앞에서 직거래 가능</string>
    <string name="price">3,000원</string>
    <string name="chat">채팅으로 거래하기</string>

    <!--  toolbar  -->
    <string name="search">검색</string>
    <string name="category">카테고리 설정</string>
    <string name="notification">알림</string>
    <string name="town">자양동</string>

    <!-- MyPage -->
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sold_history">판매내역</string>
    <string name="book_change">예약중으로 변경</string>
    <string name="ed_change">거래완료로 변경</string>
    <string name="write_review">거래후기 남기기</string>
    <string name="hide">숨기기한 게시글이 없어요.</string>
    <string name="finish">거래완료</string>
    <string name="like_history">관심목록</string>

</resources>