<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_button"
        android:layout_width = "20dp"
        android:layout_height = "20dp"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:iconTint="@color/black"
        app:showAsAction="always"/>

    <item
        android:id="@+id/category_button"
        android:layout_width = "20dp"
        android:layout_height = "20dp"
        android:icon="@drawable/ic_filter_outline_18"
        android:title="@string/category"
        android:iconTint="@color/black"
        app:showAsAction="always"/>

    <item
        android:id="@+id/notification_button"
        android:layout_width = "20dp"
        android:layout_height = "20dp"
        android:icon="@drawable/icon_notification"
        android:title="@string/notification"
        android:iconTint="@color/black"
        app:showAsAction="always"/>

</menu>